<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true"
    tools:context=".view.DetailUserActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/err_msg2"
            style="@style/textDetailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/secondary"
            android:text="@string/errMsg3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/back_btn"
            style="@style/textDetailUser.backbtn"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView"
            style="@style/textDetailUser.actbar"
            android:text="@string/app_detail"
            app:layout_constraintBottom_toBottomOf="@+id/back_btn"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toTopOf="@+id/back_btn"
            tools:ignore="MissingConstraints" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            style="@style/avatarDetailUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/name_tv"
            style="@style/textDetailUser.changeable"
            app:layout_constraintBottom_toBottomOf="@+id/user_tv"
            app:layout_constraintStart_toEndOf="@+id/user_tv"
            app:layout_constraintTop_toTopOf="@+id/user_tv"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/user_tv" />


        <TextView
            android:id="@+id/location_tv"
            style="@style/textDetailUser.changeable"
            app:layout_constraintBottom_toBottomOf="@+id/loc_tv"
            app:layout_constraintStart_toEndOf="@+id/loc_tv"
            app:layout_constraintTop_toTopOf="@+id/loc_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/loc_tv" />

        <TextView
            android:id="@+id/company_tv"
            style="@style/textDetailUser.changeable"
            app:layout_constraintBottom_toBottomOf="@+id/com_tv"
            app:layout_constraintStart_toEndOf="@+id/com_tv"
            app:layout_constraintTop_toTopOf="@+id/com_tv"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/com_tv" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/user_tv"
            style="@style/textDetailUser.changeable"
            android:text="@string/user_tv"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/textDetailUser.icon"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/loc_tv"
            style="@style/textDetailUser.changeable"
            android:text="@string/loc_tv"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView2"
            style="@style/textDetailUser.icon"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/com_tv"
            style="@style/textDetailUser.changeable"
            android:text="@string/com_tv"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView3"
            style="@style/textDetailUser.icon"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_baseline_location_city_24" />

        <TextView
            android:id="@+id/jrepository_tv"
            style="@style/textDetailUser.topflw"
            android:layout_marginTop="16dp"
            android:text="@string/repos"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/tvname" />

        <TextView
            android:id="@+id/textView5"
            style="@style/textDetailUser"
            android:text="@string/repos"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/jrepository_tv" />

        <TextView
            android:id="@+id/jfollower_tv"
            style="@style/textDetailUser.topflw"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvname"
            tools:ignore="MissingConstraints"
            tools:text="@string/followers" />


        <TextView
            android:id="@+id/textView3"
            style="@style/textDetailUser"
            android:text="@string/followers"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/jfollower_tv" />

        <TextView
            android:id="@+id/textView4"
            style="@style/textDetailUser"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/jfollowing_tv" />

        <TextView
            android:id="@+id/jfollowing_tv"
            style="@style/textDetailUser.topflw"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/tvname"
            tools:ignore="MissingConstraints"
            tools:text="@string/following" />

        <TextView
            android:id="@+id/tvname"
            style="@style/textDetailUser.topflw.name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:ignore="MissingConstraints"
            tools:text="@string/app_name" />

        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/favBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_share_24" />

        <ToggleButton

            android:id="@+id/favBtn"
            style="@style/favBtn"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/textDetailUser.tab"
            android:background="@color/secondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_tv"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

        </androidx.viewpager2.widget.ViewPager2>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>